Fix jumping header

--- a/css/main.css
+++ b/css/main.css
@@ -144,12 +144,18 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
-  height: 4rem;
+  height: 4.5rem;
+  display: inline-flex;
+  align-items: center;
 }
 
 header * {
   font-weight: bold;
   font-size: 2rem;
+}
+
+header > *:not(:last-child) {
+  margin-right: 1rem;
 }
 
 footer {
@@ -267,8 +273,7 @@ input[type=submit]:active, button:active {
 
 .search {
   display: inline-flex;
-  align-items: baseline;
-  flex-wrap: wrap;
+  align-items: center;
 }
 
 input[type=search] {
